--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "nwb build-react-component --no-demo",
-    "deploy": "nwb build-react-component --no-demo mkdir -p ../mirador-integration/mirador-image-tools/es && cp -r es/ ../mirador-integration/mirador-image-tools/es",
+    "deploy": "nwb build-react-component --no-demo && mkdir -p ../mirador-integration/mirador-image-tools/es && cp -r es/ ../mirador-integration/mirador-image-tools/es",
     "clean": "nwb clean-module && nwb clean-demo",
     "lint": "eslint ./src ./__tests__",
     "prepublishOnly": "npm run build",
