--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mirador-image-tools",
-  "version": "0.11.0",
+  "name": "@etu/mirador-image-tools",
+  "version": "0.0.1",
   "description": "mirador-image-tools React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -55,5 +55,8 @@
   "repository": "",
   "keywords": [
     "react-component"
-  ]
+  ],
+  "publishConfig": {
+    "@etu:registry": "http://localhost/api/v4/projects/3/packages/npm/"
+  }
 }
