Use gitlab package registry

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   ],
   "scripts": {
     "build": "nwb build-react-component --no-demo",
-    "deploy": "nwb build-react-component --no-demo && mkdir -p ../mirador-integration/mirador-image-tools/es && cp -r es/ ../mirador-integration/mirador-image-tools/es",
     "clean": "nwb clean-module && nwb clean-demo",
     "lint": "eslint ./src ./__tests__",
     "prepublishOnly": "npm run build",
@@ -57,6 +56,6 @@
     "react-component"
   ],
   "publishConfig": {
-    "@etu:registry": "http://localhost/api/v4/projects/3/packages/npm/"
+    "@etu:registry": "https://375q38133l.xicp.fun/api/v4/projects/2/packages/npm/"
   }
 }
