Change to local registry

--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "react-component"
   ],
   "publishConfig": {
-    "@etu:registry": "https://375q38133l.xicp.fun/api/v4/projects/2/packages/npm/"
+    "@etu:registry": "http://localhost:4873/"
   }
 }
